--- a/templates/appointment/confirmation_email.html
+++ b/templates/appointment/confirmation_email.html
@@ -16,6 +16,6 @@
     <p>Thank you for choosing our clinic!</p>
     
     <p>Best regards,<br>
-    Vet Clinic Team</p>
+    PetVet Clinic Team</p>
 </body>
 </html>
