--- a/templates/appointment/new_appointment_email.html
+++ b/templates/appointment/new_appointment_email.html
@@ -11,12 +11,12 @@
         <li>Date: {{ appointment.schedule.day_of_week }}</li>
         <li>Time: {{ appointment.schedule.start_time }}</li>
         <li>Reason: {{ appointment.reason }}</li>
-        <li>Amount Paid: NPR {{ appointment.amount_paid }}</li>
+        <li>Amount Paid: NPR 1000</li>
     </ul>
     
     <p>Please log in to your account to accept or reject this appointment.</p>
     
     <p>Best regards,<br>
-    Vet Clinic Team</p>
+    PetVet Clinic Team</p>
 </body>
 </html>
