--- a/templates/authUser/settings.html
+++ b/templates/authUser/settings.html
@@ -1,7 +1,7 @@
 {% extends 'main/base1.html' %}
 {% load static %}
 
-{% block title %}Account Settings | PetCare Connect{% endblock %}
+{% block title %}Account Settings | PetVet{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'assets/css/user_info.css' %}">
