--- a/templates/coreFunctions/appointment.html
+++ b/templates/coreFunctions/appointment.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 
-{% block title %}Appointment Process | PetCare Connect{% endblock %}
+{% block title %}Appointment Process | PetVet{% endblock %}
 
 {% block content %}
 <section class="hero" style="min-height: 60vh;">
