--- a/templates/coreFunctions/contact.html
+++ b/templates/coreFunctions/contact.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 
-{% block title %}Contact Us | PetCare Connect{% endblock %}
+{% block title %}Contact Us | PetVet{% endblock %}
 
 {% block content %}
 <section class="hero" style="min-height: 60vh;">
