--- a/templates/appointment/appointment_creation_vets.html
+++ b/templates/appointment/appointment_creation_vets.html
@@ -1,7 +1,7 @@
 {% extends 'main/base1.html' %}
 {% load static %}
 
-{% block title %}Add Vet Schedule | PetCare Connect{% endblock %}
+{% block title %}Add Vet Schedule | PetVet{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
