--- a/templates/appointment/appointment_list.html
+++ b/templates/appointment/appointment_list.html
@@ -1,7 +1,7 @@
 {% extends 'main/base1.html' %}
 {% load static %}
 
-{% block title %}My Appointments | PetCare Connect{% endblock %}
+{% block title %}My Appointments | PetVet{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -50,7 +50,7 @@
                             <span class="date-time">
                                 <i class="fas fa-calendar-day"></i> 
                                 {{ appointment.schedule.day_of_week }}, 
-                                {{ appointment.schedule.created_at|date:"F j, Y" }}
+                                {{ appointment.created_at|date:"F j, Y" }}
                             </span>
                             <span class="time-slot">
                                 <i class="fas fa-clock"></i> 
