--- a/templates/authUser/forgot_password.html
+++ b/templates/authUser/forgot_password.html
@@ -1,7 +1,7 @@
 {% extends 'main/base1.html' %}
 {% load static %}
 
-{% block title %}Forgot Password | PetCare Connect{% endblock %}
+{% block title %}Forgot Password | PetVet{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'assets/css/user_info.css' %}">
@@ -41,12 +41,6 @@
                     </button>
                 </div>
             </form>
-            
-            {% if not user.is_authenticated %}
-<div class="form-footer">
-    <p>Remember your password? <a href="{% url 'authUser:loginUser' %}">Log in</a></p>
-</div>
-{% endif %}
         </div>
     </div>
 </div>
