--- a/templates/chat/inbox_detail.html
+++ b/templates/chat/inbox_detail.html
@@ -1,6 +1,6 @@
 {% extends 'main/base1.html' %}
 {% load static %}
-
+{% block title %}PetVet | Inbox{% endblock %}
 {% block content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
