--- a/templates/main/base1.html
+++ b/templates/main/base1.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-{% block title %}PetVet | PetCare Connect{% endblock %}
-
+<title>{% block title %}PetVet{% endblock %}</title>
+<link rel="icon" type="image/png" href="{% static 'assets/images/paw.png' %}">
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'assets/css/feed.css' %}">
 {% endblock %}
@@ -14,7 +14,8 @@
         <div class="nav-left">
             <div class="logo">
                 <i class="fas fa-paw"></i>
-                <span>PetVet</span>
+                <span>Pet<span class="vet-text">Vet</span></span>
+
             </div>
         </div>
         
@@ -26,7 +27,7 @@
                 </form>
             </div>
         </div>
-        
+
         <div class="nav-right">
             
             <div class="user-profile" id="profile-menu-btn">
@@ -51,6 +52,7 @@
                     <a href="{% url 'authUser:user-info' %}"><i class="fas fa-user"></i> My Profile</a>
                     <a href="{% url 'authUser:account_settings' %}"><i class="fas fa-cog"></i> Settings</a>
                     <a href="{% url 'authUser:logoutUser' %}"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            
                 </div>
             </div>
         </div>
@@ -111,10 +113,18 @@
                     {% elif request.user.petownerprofile %}
                         <li><a href="{% url 'appointment:vet_list' %}"><i class="fas fa-search"></i> Find Vets</a></li>
                         <li><a href="{% url 'appointment:appointment_list' %}"><i class="fas fa-calendar-check"></i> My Appointments</a></li>
-                        <li><a href=""><i class="fas fa-plus"></i> Book New</a></li>
                     {% endif %}
                 </ul>
             </div>
+
+            <div class="sidebar-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="{% url 'coreFunctions:contact' %}"><i class="fas fa-envelope"></i> Contact Us</a></li>
+                    <li><a href="{% url 'coreFunctions:about' %}"><i class="fas fa-info-circle"></i> About Us</a></li>
+                </ul>
+            </div>
+
         </aside>
 
         <!-- Feed Content -->
