--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -1,7 +1,7 @@
 <header>
     <div class="navbar">
         <a href="{% url 'coreFunctions:home' %}" class="logo">
-            <img src="https://via.placeholder.com/40" alt="PetCare Logo">
+            <i class="fas fa-paw"></i>
             Pet<span>Vet</span>
         </a>
         <div class="nav-links">
@@ -17,12 +17,12 @@
                     <i class="fas fa-home"></i> Home
                 </a>
             {% else %}
-                <button class="btn btn-outline">
-                    <i class="fas fa-sign-in-alt"></i> Login
-                </button>
-                <button class="btn btn-primary">
-                    <i class="fas fa-user-plus"></i> Sign Up
-                </button>
+            <button class="btn btn-outline" onclick="window.location.href='/user/login/'">
+                <i class="fas fa-sign-in-alt"></i> Login
+            </button>
+            <button class="btn btn-primary" onclick="window.location.href='/user/login/'">
+                <i class="fas fa-user-plus"></i> Sign Up
+            </button>
             {% endif %}
         </div>
     </div>
